**********************************************************
Change Log
**********************************************************

**********************************************************
jsf-0.4.4   20-October-1998  
**********************************************************
1) Put jsf-0.4.3 into cvs respository with a revision 0-4-3 and changed 
   Makefiles and Imakefiles for easy compilation and likn of 
   libraries and executables.

**********************************************************
jsf-0.4.3   19-October-1998  
**********************************************************
1) Prepare example for CCD beam data analysis.
   To develop , JSFSteer and JSFModule were changed to.
2) JSFDBS is newly created to use data base.

**********************************************************
jsf-0.4.2   8-October-1998  
**********************************************************
1) Made a few modifications to run on HI-UX
	
**********************************************************
jsf-0.4.1   6-October-1998  
**********************************************************
Log start